--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "name": "newproject-inversel",
   "version": "1.0.0",
+  "type": "module",
+  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
-  "devDependencies": {
-    "vite": "^5.4.21"
+  "dependencies": {
+    "vite": "^5.4.21",
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.0.0"
   }
 }
