fix Vercel build

--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "postinstall": "chmod +x node_modules/.bin/vite",
     "dev": "vite",
-    "build": "vite build",
+    "build": "npx vite build",
     "preview": "vite preview"
   },
- "dependencies": {
-  "vite": "^5.4.21",
-  "react": "^18.3.0",
-  "react-dom": "^18.3.0",
-  "@vitejs/plugin-react": "^4.0.0"
-}
+  "dependencies": {
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0",
+    "vite": "^5.4.21",
+    "@vitejs/plugin-react": "^4.0.0"
+  }
 }
