--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^4.0.0",
     "react": "^18.3.0",
-    "react-dom": "^18.3.0",
-    "vite": "^5.4.21",
-    "@vitejs/plugin-react": "^4.0.0"
+    "react-dom": "^18.3.0"
+  },
+  "devDependencies": {
+    "vite": "^7.3.0"
   }
 }
